# decky_vn_manager

./: Makefile  main.py  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: build.yml
assets/: icon.md
backend/vn_core/: Cargo.toml
backend/vn_core/src/: dlsite.rs  downloads.rs  game_library.rs  hikari.rs  lib.rs  performance.rs  steam.rs  util.rs
defaults/: settings.json
scripts/: make_zip.py
src/: index.tsx
src/components/: DLsiteLogin.tsx  DownloadManager.tsx  GameList.tsx  HikariLogin.tsx  Settings.tsx  SteamIntegration.tsx
src/hooks/: useTranslation.ts
src/locales/: en.ts  index.ts  ja.ts  zh_CN.ts  zh_TW.ts
src/utils/: styles.ts
