[package]
name = "vn_core"
version = "0.1.0"
edition = "2021"
authors = ["Visual Novel Manager Contributors"]

[lib]
name = "vn_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "serde", "abi3-py310"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
pythonize = "0.20"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "process"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["json"] }
futures = "0.3"
once_cell = "1.19"
uuid = { version = "1.8", features = ["v4"] }
time = { version = "0.3", features = ["macros", "serde"] }
anyhow = "1.0"
sha1 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2.5"
sysinfo = "0.30"
parking_lot = "0.12"
sha2 = "0.10"
flate2 = { version = "1.0", features = ["zlib"] }
tar = "0.4"
chrono = { version = "0.4", features = ["clock"] }
reqwest_cookie_store = "0.6"
dirs = "5.0"
